@@ -1,4 +1,4 @@
 DIST gkrellm-gamma-2.03.tar.gz 24655 RMD160 db9a8dfbc280637e7e91135cc192a6264e0cf9c9 SHA1 b645b77bf0c51ea86fd19c4a3ef30861df38efb1 SHA256 d0a631e0570d437ff6bf0635567be368a07990df872501fad258c30d6a1775e2
-EBUILD gkrellm-gamma-2.03-r1.ebuild 880 RMD160 e402064f6a46e99b1baf4fb7d9792dde8ae92f05 SHA1 29c6435728f1bd9ec82895845822379e17ccac49 SHA256 83e8d194e41f787ddc64e8a8928b6c7fdc8110c003ee27070961f026d69aa4ac
-MISC ChangeLog 1948 RMD160 f9d211ca2a99f3d5e5768fe953d4ab8f0d7c9176 SHA1 1deb77f06e1229e07328208cd2df7b85ea69d9d7 SHA256 4dcf7cc79513b18bbb2b7ec7fcfb4161965be05cfc23563cea594d22a46bea06
+EBUILD gkrellm-gamma-2.03-r1.ebuild 934 RMD160 eb82723db82bd3713744b227002ca40345b577d8 SHA1 51ad1c9ab10b41ddf7be593792f0243c687c1665 SHA256 534e410e1298b71cb9321961c8b0eb78bf794de752bf1f7fab32e050dfbbd910
+MISC ChangeLog 2079 RMD160 2f1f28f1b620ce781363d23c99ea227c737e4fb4 SHA1 1a9e0e0a30b561299cca6a0e2aeb86616381f119 SHA256 0dd2893f6818b022e5497c4f623ff366ab575f96716114c71575aa1ce8596db9
 MISC metadata.xml 254 RMD160 415926d9875e8fe9b0d03e74435ad2521fac159c SHA1 172a4c3880766b1bb7e75f4f2b4ed0b62c1d2d6c SHA256 dafc7e6c5cb681b9d6ecbe2ff4280bb987d3533c30bb334b4845faee02aa7279
